[package]
name = "greycat-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive", "env"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
ureq = { version = "3.0.8", features = ["json"] }
rayon = "1.10.0"
sha2 = "0.10.8"
base64 = "0.22.1"
hex = "0.4.3"
dotenvy = { version = "0.15.7", features = ["clap"] }
log = "0.4.26"
env_logger = "0.11.7"
termsize = "0.1.9"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
